Correct admin styling - Add missing colors

--- a/web/themes/custom/sand/css/helpers.css
+++ b/web/themes/custom/sand/css/helpers.css
@@ -2311,6 +2311,15 @@ textarea {
 .background--red {
   background: #c51313 !important; }
 
+.status-available, .status-open {
+  background-color: #659f13 !important; }
+
+.status-unavailable, .status-closed {
+  background-color: #c51313 !important; }
+
+.status-impacted {
+  background-color: #ffa02f !important; }
+
 /* Lists
    ========================================================================== */
 .no-bullets {
@@ -2528,9 +2537,8 @@ blockquote {
     font-size:  calc($unitless-value / $baseline-px)rem; }
 
 ul {
-  margin: 0.75em 0 !important;
-  list-style-type: disc;
-  padding-inline-start: 40px; }
+  margin: 0.75em 0;
+  list-style-type: disc; }
   ul ul {
     list-style-type: circle;
     margin-left: 0; }
